--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "@fortawesome/fontawesome-free": "^6.6.0",
     "axios": "^1.7.7",
     "bootstrap": "^5.3.3",
+    "chart.js": "^4.4.6",
     "pinia": "^2.2.4",
+    "sweetalert2": "^11.14.5",
     "vue": "^3.5.12",
     "vue-router": "^4.4.5"
   },
