--- a/package.json
+++ b/package.json
@@ -12,13 +12,18 @@
   },
   "dependencies": {
     "@fortawesome/fontawesome-free": "^6.6.0",
+    "@vueuse/core": "^11.3.0",
     "axios": "^1.7.7",
     "bootstrap": "^5.3.3",
-    "chart.js": "^4.4.6",
+    "chart": "^0.1.2",
+    "chart.js": "^3.9.1",
     "pinia": "^2.2.4",
     "sweetalert2": "^11.14.5",
+    "toastification": "^0.1.4",
     "vue": "^3.5.12",
-    "vue-router": "^4.4.5"
+    "vue-chart-3": "^3.1.8",
+    "vue-router": "^4.4.5",
+    "vue-toastification": "^2.0.0-rc.5"
   },
   "devDependencies": {
     "@eslint/js": "^9.13.0",
